2006-12-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Committing GAL Caching implementation from Devashish

	* addressbook/Makefile.am: Added the gconf support to exchange storage
	* addressbook/apps_exchange_addressbook.schemas.in.in: Schema to set
	the cache reload interval
	* addressbook/e-book-backend-gal.c: (gal_reconnect),
	(get_contact_handler), (get_contact), (contact_list_handler),
	(get_contact_list), (build_contact_from_entry), (poll_ldap),
	(ldap_search_handler), (start_book_view), (tool_server_controls),
	(parse_page_control), (dosearch), (generate_cache), (set_mode),
	(load_source), (dispose): Implementation of GAL Cache for Exchange.
	* configure.in:

2006-11-16  Srinivasa Ragavan  <sragavan@novell.com>

	* addressbook/e-book-backend-gal.c: (contact_list_handler): Fix for
	hang while viewing a HTML mail, which has images to be loaded based on
	contacts. Downstream fix from SUSE.

2006-11-15  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):
	Set the online status before connecting to the server.
	Notify error messages to evolution.
	Fixes #219729 (bugzilla.novell.com)

2006-11-15  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href):Removed the deleted link
	properly. Remove the stale X-MOD-PROPS from the instances.
	Send the status properly to indicate errors.
	Fixes #215633 (bugzilla.novell.com)

2006-10-02 Harish Krishnaswamy <kharish@novell.com>

	* NEWS, configure.in: Connector 2.8.1 release.

2006-09-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* NEWS, configure.in: Connector 2.8.0 release.

2006-08-22  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-store.c: Including camel-exchange-summary.h.
	Fixes build issue with -Werror-implicit-function-declaration flag.
	Patch submitted by "Matthew Barnes  ", Fixes #349949. 

2006-08-21  Srinivasa Ragavan <sragavan@novell.com>
