@@ -1,3 +1,8 @@
+2006-12-04  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	* camel/camel-exchange-store.c: (make_folder_info): Decode path
+	name and use it as full_name.
+	
 2006-12-01  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Committing GAL Caching implementation from Devashish
